[package]
name = "chexx0r"
version = "0.1.0"
edition = "2024"
authors = ["yungalgo"]
description = "CLI tool to check domain and social media username availability"
license = "MIT"

[[bin]]
name = "chexx0r"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
domain-check-lib = "0.6"
colored = "3.0"
anyhow = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.18"
comfy-table = "7.1"
