[package]
name = "chexx0r"
version = "0.1.0"
edition = "2021"
authors = ["yungalgo"]
description = "simple cli utility for checking domain and username availability"
license = "MIT"
repository = "https://github.com/yourusername/chexx0r"  # Update with your actual GitHub repo URL
homepage = "https://github.com/yourusername/chexx0r"     # Update with your actual GitHub repo URL
keywords = ["cli", "domain", "username", "availability", "social-media", "checker"]
categories = ["command-line-utilities"]

[[bin]]
name = "chexx0r"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
domain-check-lib = "0.6"
colored = "3.0"
anyhow = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.18"
comfy-table = "7.1"
rand = "0.9"
